# BTS-Gateway

./: README.md
SC20/: EdgexV2.txt  apiEdgexV2.txt  devices.json  new 1.txt  profiles.json
SC20/EdgeX_Tutorial/messenger/: app.py
SC20/Test_EdgeX/: CMakeLists.txt
SC20/Test_EdgeX/include/: http.h
SC20/Test_EdgeX/src/: http.cpp
Unittest/json/: CMakeLists.txt  json_test.cc  json_test.h  json_unittest.cc  register.h
Unittest/mqtt/: CMakeLists.txt  mqtt.cc  mqtt.h  mqtt_unittest.cc
mqtt_control/: Makefile  mqtt_pub  mqtt_pub.cpp  mqtt_sub  mqtt_sub.cpp
sc20_gw_modbus/: CMakeLists.txt  clean.sh  run.sh
sc20_gw_modbus/include/: bts_debug.h  bts_json.h  bts_modbus.h  bts_mqtt.h  bts_register.h  main.h
sc20_gw_modbus/src/: bts_debug.cpp  bts_json.cpp  bts_modbus.cpp  bts_mqtt.cpp  main.cpp
